fix(vital-card): A11y bug for color contrast ratio

--- a/src/stories/sampleCardComponents/vitalCard.scss
+++ b/src/stories/sampleCardComponents/vitalCard.scss
@@ -16,13 +16,13 @@
   }
   &-category-text {
     @include typography.type-ui-02;
-    color: var(--kd-color-text-secondary);
+    color: var(--kd-color-text-primary);
     margin-top: 4px;
     margin-bottom: 0px;
   }
   &-subcategory-text {
     @include typography.type-ui-03;
-    color: var(--kd-color-darkstone-50);
+    color: var(--kd-color-text-secondary);
     margin-top: 0;
     margin-bottom: 4px;
   }
